# any_iterator

./: README.md  any_iterator.md
implementation/: .gitignore  CMakeLists.txt  sample_anybidirectionaliterator_base.hpp  sample_anyforwarditerator_base.hpp  sample_anyinputiterator_base.hpp  sample_anyiterator.hpp  sample_anyiterator_base.hpp  sample_anyoutputiterator_base.hpp  sample_anyrandomaccessiterator_base.hpp  sample_compatibleiterators.hpp  sample_rangecheck.hpp  sample_smallbuffer.hpp  sample_util.hpp
implementation/benchmarks/: sample_anyiterator_benchmark.cpp
implementation/tests/: sample_anyiterator.t.cpp  sample_smallbuffer.t.cpp
